@@ -1,5 +1,7 @@
 2014-12-11  Jason Merrill  <jason@redhat.com>
 
+	* c-cppbuiltin.c (c_cpp_builtins): Enable C++14 __cpp_constexpr.
+
 	* c-cppbuiltin.c (c_cpp_builtins): Define __cpp_runtime_arrays if
 	we aren't complaining about VLAs.
 
